Homepage, Supporter still needs spacing fix

--- a/hero-fronend/src/Components/Profile/Profile.css
+++ b/hero-fronend/src/Components/Profile/Profile.css
@@ -1,6 +1,6 @@
 .Profile {
     background: #F5F5F5;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -69,7 +69,8 @@ color: #0000FF;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
-    width: 79px;
+    /* width: 79px; */
+    width: 130px;
     height: 77.45px;
     border-radius: 50%;
     margin-right: 19px;
@@ -78,8 +79,7 @@ color: #0000FF;
     background: url(../../Assets/MobilizersPhotos/Julieta_Profile\ Picture.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 79px;
-    height: 79px;
+    width: 130px;    height: 79px;
     border-radius: 50%;
     margin-right: 19px;
 }
@@ -88,8 +88,7 @@ color: #0000FF;
     background: url(../../Assets/MobilizersPhotos/Jessica\ Klezcka.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 79px;
-    height: 79px;
+    width: 130px;    height: 79px;
     border-radius: 50%;
     margin-right: 19px;
 }
@@ -98,8 +97,7 @@ color: #0000FF;
     background: url(../../Assets/MobilizersPhotos/Juan\ Sierra.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 79px;
-    height: 79px;
+    width: 130px;    height: 79px;
     border-radius: 50%;
     margin-right: 19px;
 }
@@ -108,8 +106,115 @@ color: #0000FF;
 #PlayJulieta {
     width: 326.16px;
     height: 151.37px;
-    background: rgba(0, 0, 0, 0.31), url(../../Assets/MobilizersPhotos/Julieta\ Martinez.jpg);
-    background-size: cover;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)), url(../../Assets/MobilizersPhotos/Julieta\ Martinez.jpg);
+    background-size:cover;
     background-repeat: no-repeat;
     border-radius: 20px;
+    background-position: 20% 60%;
+    margin-top: 22px;
 }
+
+.tb {
+    margin-top: 21px;
+}
+
+.cmp {
+    height: 46px;
+    background: #0000FF;
+    border-radius: 20px 0px 0px 20px;
+    border: none;
+    font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 22px;
+
+align-items: center;
+
+color: #FFFFFF;
+}
+
+.vic {
+    height: 46px;
+background: #8585FF;
+border-radius: 0px 20px 20px 0px;
+border: none;
+font-style: normal;
+font-weight: 500;
+font-size: 14px;
+line-height: 22px;
+
+/* or 157% */
+align-items: center;
+
+color: #FFFFFF;
+    
+}
+
+.ladesc {
+    width: 324px;
+height: 201px;
+
+background: #0000FF;
+border-radius: 30px;
+margin-top: 20px;
+}
+
+
+.ladesc b {
+    font-style: italic;
+font-weight: 500;
+font-size: 17px;
+line-height: 20px;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.ladesc p {
+    font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-top: 15px;
+
+}
+
+.ladesc button {
+    font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 20px;
+
+/* or 143% */
+align-items: center;
+text-align: center;
+
+color: #0000FF;
+border: none;
+width: 163px;
+height: 46px;
+background: #FFFFFF;
+border-radius: 30px;
+}
+
+.cause h5 {
+    color: #0000FF;
+}
+
+.causebtn {
+background: #0000FF;
+border-radius: 30px;
+    color: #FFFFFF;
+    border: none;
+    height: 30px;
+}
+
+.causebtn.last {
+    margin-top: 15px;    
+}
+
